# Auto-Backup

./: Cargo.toml  LICENSE  README.md  app.py  build.sh  requirements.txt  utils.py  worker.py
.github/workflows/: build.yml
src/: config.rs  gui.rs  main.rs  utils.rs  worker.rs
