[package]
name = "Auto-Backup"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
eframe = { version = "0.33.3", features = ["wgpu"] }
rfd = "0.16.0"
notify = "8.2.0"
walkdir = "2.5.0"
chrono = "0.4.42"
image = { version = "0.25.9", default-features = false, features = ["ico"] }

[build-dependencies]
winres = "0.1.12"